Update docs formatting and pages

--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -4,3 +4,18 @@
     color: white;
 
   }
+
+@media only screen and (min-width: 75.25em) {
+  .md-main__inner {
+    max-width: 1000em;
+  }
+  .md-sidebar--primary {
+    left: 0;
+  }
+  .md-sidebar--secondary {
+    right: 0;
+    margin-left: 10em;
+    -webkit-transform: none;
+    transform: none;   
+  }
+}
